
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int tl_store_raw_data (scalar_t__,int ) ;
 int wildcard_add_rpc_value (char const*,int,scalar_t__,int ) ;
 scalar_t__ wildcard_ptr ;
 int wildcard_total_data_sent ;
 int wildcard_total_keys_sent ;

void wildcard_rpc_report_finish (const char *key, int key_len) {
  *(int *)wildcard_ptr = wildcard_total_keys_sent;
  wildcard_add_rpc_value (key, key_len, wildcard_ptr, wildcard_total_data_sent);
  tl_store_raw_data (wildcard_ptr, wildcard_total_data_sent);
}
