; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-engine.c_wildcard_rpc_report_finish.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-engine.c_wildcard_rpc_report_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wildcard_total_keys_sent = common dso_local global i32 0, align 4
@wildcard_ptr = common dso_local global i64 0, align 8
@wildcard_total_data_sent = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wildcard_rpc_report_finish(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @wildcard_total_keys_sent, align 4
  %6 = load i64, i64* @wildcard_ptr, align 8
  %7 = inttoptr i64 %6 to i32*
  store i32 %5, i32* %7, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i64, i64* @wildcard_ptr, align 8
  %11 = load i32, i32* @wildcard_total_data_sent, align 4
  %12 = call i32 @wildcard_add_rpc_value(i8* %8, i32 %9, i64 %10, i32 %11)
  %13 = load i64, i64* @wildcard_ptr, align 8
  %14 = load i32, i32* @wildcard_total_data_sent, align 4
  %15 = call i32 @tl_store_raw_data(i64 %13, i32 %14)
  ret void
}

declare dso_local i32 @wildcard_add_rpc_value(i8*, i32, i64, i32) #1

declare dso_local i32 @tl_store_raw_data(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
